fix lower scoreboard spacing

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 body {
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(rgb(10, 26, 49), #111);
+  background: linear-gradient(rgb(5 5 37), #111);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -92,7 +92,6 @@ button:hover {
   max-width: 100%;
   justify-content: space-between;
   align-items: center;
-  letter-spacing: 10px;
 }
 
 .score .score-img {
@@ -154,7 +153,7 @@ button:hover {
 }
 .score .o-score-num {
   color: tomato;
-  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .right-score {
